# brlcv

./: .gitmodules  CMakeLists.txt  MIDILatency.cpp  brltest.cpp  cv2midiclock.cpp  edge.cpp  stats.cpp
cmake/: FindBrlAPI.cmake  FindJACK.cmake
lib/: CMakeLists.txt  brlapi.cpp  brlapi.hpp  dsp.hpp  impl_ptr.hpp  jack.cpp  jack.hpp  midi.hpp
